# MyEcs

./: CMakeLists.txt  LICENSE  README.md  ecs.c  ecs.h  example.c  timer.h
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MyEcs.sln  MyEcs.vcxproj  MyEcs.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_vs/MyEcs.dir/Debug/: MyEcs.exe.recipe  MyEcs.ilk
build_vs/MyEcs.dir/Debug/MyEcs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  MyEcs.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_vs/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_vs/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
